Closed
Bug 240367
Opened 22 years ago
Closed 22 years ago
Saving page (Save Page As) or image results in "Download Error" dialog with hostname (but succeeds anyway) download error
Categories
(Core :: Networking, defect)
Core
Networking
Tracking
()
VERIFIED
FIXED
mozilla1.7final
People
(Reporter: jruderman, Assigned: Biesinger)
References
Details
(Keywords: regression, smoketest, verified1.7)
Attachments
(1 file)
|
1.59 KB,
patch
|
darin.moz
:
review+
darin.moz
:
superreview+
mkaply
:
approval1.7+
|
Details | Diff | Splinter Review |
Steps to reproduce:
1. Go to http://www.google.com/
2. Right-click the logo and select "Save Image As..."
3. Select a download location.
Result: Dialog that says "Download Error" in the title and "www.google.com" in
the body. (The download succeeds despite the error message.)
Based on when reports started, I think this is a regression starting in April 11
builds.
| Reporter | ||
Updated•22 years ago
|
Flags: blocking0.9?
Comment 1•22 years ago
|
||
This started with me as well when I upgraded to Mozilla/5.0 (X11; U; Linux i686;
en-US; rv:1.7b) Gecko/20040411 Firefox/0.8.0+
Comment 2•22 years ago
|
||
This bug also affects Linux (2004-04-11) builds. --> All/All.
camecek, do not set the blocking0.9+ or blocking0.9- flag unless you have direct
permission from a Firefox developer to so, and if so, you need to state this. Am
setting back to blocking0.9?, even though this is almost certainly a + anyway.
Also setting severity to major, as this is a highly visible bug.
Severity: normal → major
Flags: blocking0.9+ → blocking0.9?
Keywords: smoketest
OS: Windows XP → All
Hardware: PC → All
Comment 3•22 years ago
|
||
It is a side effect of the checkin
http://tinderbox.mozilla.org/bonsai/cvsquery.cgi?treeid=default&module=MozillaTinderboxAll&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=darin%25meer.net&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2004-04-10+13%3A00%3A00&maxdate=2004-04-10+14%3A00%3A00&cvsroot=%2Fcvsroot
With backing out these, I can get rid of the anoying error dialog.
| Reporter | ||
Comment 4•22 years ago
|
||
Darin, comment 3 says this regression is a side effect of your checkin.
Comment 5•22 years ago
|
||
Confirmed.
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.7b) Gecko/20040414
Firefox/0.8.0+
Microsoft Windows 2000 Pro 5.00.2195 SP4
| Assignee | ||
Comment 6•22 years ago
|
||
well, this happens in seamonkey as well; it's just that the error dialog in
seamonkey doesn't look like one...
(It shows with a title of "Saving <filename>", and the dialog text is the filename)
-> browser/networking per comment 3
Assignee: bugs → darin
Component: Downloading → Networking
Product: Firefox → Browser
QA Contact: aebrahim → benc
Version: unspecified → Trunk
| Assignee | ||
Comment 7•22 years ago
|
||
(In reply to comment #6)
> (It shows with a title of "Saving <filename>", and the dialog text is the
filename)
sorry, the text is actually the hostname
| Assignee | ||
Comment 8•22 years ago
|
||
so the problem is (for the seamonkey progress dialog, at least):
the onStatusChange function gets an aStatus code of 2152398856, i.e. 0x804B0008,
i.e. nsITransport::STATUS_READING.
That is an error code.
This seems to only happen for cached loads; i.e. almost always for "Save image"
and "File|save page", less often for "save link target".
of course, before bug 240053's patch, cached loads did not generate such
progress events at all. but the question is, why was this not a problem with
non-cached loads before?
(nsIWebProgressListener leaves aStatus totally undocumented of course, which
doesn't help...)
Comment 9•22 years ago
|
||
*** Bug 240514 has been marked as a duplicate of this bug. ***
Updated•22 years ago
|
Flags: blocking1.7?
Comment 10•22 years ago
|
||
*** Bug 240612 has been marked as a duplicate of this bug. ***
Comment 11•22 years ago
|
||
If a larger image (e.g. http://pubs.usgs.gov/imap/i-2812/i-2812.jpg 1.5Mb) is
saved the warning keep coming, at least 20 in total. Clearing Cache before
download prevents these problems and insure a "normal" download dialogue w/o any
errors.
*** Bug 240959 has been marked as a duplicate of this bug. ***
Comment 13•22 years ago
|
||
*** Bug 241008 has been marked as a duplicate of this bug. ***
Comment 14•22 years ago
|
||
*** Bug 241007 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 15•22 years ago
|
||
*** Bug 241091 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 16•22 years ago
|
||
(In reply to comment #8)
> but the question is, why was this not a problem with
> non-cached loads before?
...because webbrowserpersist filters those out. duh.
| Assignee | ||
Comment 17•22 years ago
|
||
Assignee: darin → cbiesinger
Status: NEW → ASSIGNED
| Assignee | ||
Updated•22 years ago
|
Attachment #146721 -
Flags: superreview?(darin)
Attachment #146721 -
Flags: review?(darin)
| Assignee | ||
Updated•22 years ago
|
Target Milestone: --- → mozilla1.7final
Comment 18•22 years ago
|
||
I can confirm that the patch fixes this bug...now all we need is r= and sr=
Comment 19•22 years ago
|
||
*** Bug 241321 has been marked as a duplicate of this bug. ***
Comment 20•22 years ago
|
||
*** Bug 241397 has been marked as a duplicate of this bug. ***
Comment 21•22 years ago
|
||
Darin should be back tomorrow to look at this.
He had a family emergency.
Flags: blocking1.7? → blocking1.7+
Comment 22•22 years ago
|
||
*** Bug 241406 has been marked as a duplicate of this bug. ***
Comment 23•22 years ago
|
||
The alerts I get on OS/2 since 11 April are not "errors", just URL saved
announcements. Save image as gives the alert on top of the normal dialog. When
the alert is dismissed, the dialog remains until dismissed separately. In
contrast, save page as alert dismissal dismisses the dialog as well. I use the
XFile filepicker replacement.
Comment 24•22 years ago
|
||
*** Bug 241449 has been marked as a duplicate of this bug. ***
Comment 25•22 years ago
|
||
Comment on attachment 146721 [details] [diff] [review]
patch
thanks biesi!!
Attachment #146721 -
Flags: superreview?(darin)
Attachment #146721 -
Flags: superreview+
Attachment #146721 -
Flags: review?(darin)
Attachment #146721 -
Flags: review+
| Assignee | ||
Comment 26•22 years ago
|
||
Comment on attachment 146721 [details] [diff] [review]
patch
low risk patch to fix an error dialog appearing when saving a page/image from
cache
Attachment #146721 -
Flags: approval1.7?
| Assignee | ||
Comment 27•22 years ago
|
||
checked in on trunk
Comment 28•22 years ago
|
||
Comment on attachment 146721 [details] [diff] [review]
patch
a=mkaply
Attachment #146721 -
Flags: approval1.7? → approval1.7+
Comment 29•22 years ago
|
||
(In reply to comment #27)
> checked in on trunk
will it be checked into the 1.7 branch as well?
| Assignee | ||
Comment 30•22 years ago
|
||
(In reply to comment #29)
> will it be checked into the 1.7 branch as well?
Sure, I've just done that - I was waiting for approval (that mkaply just gave)
Checking in nsWebBrowserPersist.cpp;
/cvsroot/mozilla/embedding/components/webbrowserpersist/src/nsWebBrowserPersist.cpp,v
<-- nsWebBrowserPersist.cpp
new revision: 1.89.2.1; previous revision: 1.89
done
Comment 31•22 years ago
|
||
*** Bug 241536 has been marked as a duplicate of this bug. ***
Comment 32•22 years ago
|
||
*** Bug 241541 has been marked as a duplicate of this bug. ***
Comment 33•22 years ago
|
||
*** Bug 241544 has been marked as a duplicate of this bug. ***
Comment 34•22 years ago
|
||
*** Bug 241569 has been marked as a duplicate of this bug. ***
Comment 35•22 years ago
|
||
Using branch build from 20040424, patch is great, nothing seems to be broken as
a result of this patch, everything perfect here.
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7) Gecko/20040424
Firefox/0.8.0+
Comment 36•22 years ago
|
||
*** Bug 241620 has been marked as a duplicate of this bug. ***
Comment 38•22 years ago
|
||
now that this is _verified_ fixed it no longer shows up in the standard mostfreq
report, so we can expect even more dupes :-(
Comment 39•22 years ago
|
||
*** Bug 241636 has been marked as a duplicate of this bug. ***
Comment 40•22 years ago
|
||
*** Bug 241666 has been marked as a duplicate of this bug. ***
Comment 41•22 years ago
|
||
*** Bug 241692 has been marked as a duplicate of this bug. ***
Comment 42•22 years ago
|
||
*** Bug 241714 has been marked as a duplicate of this bug. ***
Comment 43•22 years ago
|
||
*** Bug 241721 has been marked as a duplicate of this bug. ***
Comment 44•22 years ago
|
||
*** Bug 241772 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 45•22 years ago
|
||
*** Bug 241786 has been marked as a duplicate of this bug. ***
Comment 46•22 years ago
|
||
*** Bug 241807 has been marked as a duplicate of this bug. ***
Updated•22 years ago
|
Flags: blocking0.9?
| Assignee | ||
Comment 47•22 years ago
|
||
*** Bug 241898 has been marked as a duplicate of this bug. ***
Comment 48•22 years ago
|
||
*** Bug 241917 has been marked as a duplicate of this bug. ***
Comment 49•22 years ago
|
||
(In reply to comment #48)
> *** Bug 241917 has been marked as a duplicate of this bug. ***
Sorry for the dupe. The standard search on the bugzilla starting page with
"Download Error" as the text *does not* find this one. I guess mine will not be
the last dupe :-(
Comment 50•22 years ago
|
||
(In reply to comment #49)
> Sorry for the dupe. The standard search on the bugzilla starting page with
> "Download Error" as the text *does not* find this one. I guess mine will not be
> the last dupe :-(
That's because this bug is fixed. What you call "standard search" only searches
unresolved bugs because these are of most interest of developers. So before
filing a bug you should also include RESOLVED bugs in your search.
Moreover, since this bug is already fixed in recent builds, the number of users
encountering this problem will drops and therefore the number of duplicate
reports will drop.
Comment 51•22 years ago
|
||
The number of dupes will not fade significantly until next release candidate.
Comment 52•22 years ago
|
||
(In reply to comment #51)
> The number of dupes will not fade significantly until next release candidate.
Sorry for the spam. My comment 50 was intended for all those people who filed a
dupe even after searching Bugzilla. Hopefully this will lead them to understand
the queries in Bugzilla a bit better and therefore avoid dupes from those people
in the future.
As to dupes to this particular issue: not much we can do about until 1.7RC2
comes out [planned for May 7]. The number of dupes for this issue will then
drop. And it will drop because 1) the peak of RC1 downloads is probably already
past and 2) the issue is fixed.
But spamming many users with speculations on the projected number of bugs is not
done. Therefore, once more:comment 50 was intended to "educate" bugzilla users.
Updated•22 years ago
|
Summary: Saving page or image results in "Download Error" dialog (but succeeds anyway) → Saving page or image results in "Download Error" dialog (but succeeds anyway) download error
Comment 53•22 years ago
|
||
*** Bug 241976 has been marked as a duplicate of this bug. ***
Comment 54•22 years ago
|
||
*** Bug 241994 has been marked as a duplicate of this bug. ***
Comment 55•22 years ago
|
||
*** Bug 242025 has been marked as a duplicate of this bug. ***
Comment 56•22 years ago
|
||
*** Bug 242057 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 57•22 years ago
|
||
*** Bug 242074 has been marked as a duplicate of this bug. ***
Comment 58•22 years ago
|
||
(In reply to comment #50)
> (In reply to comment #49)
> > Sorry for the dupe. The standard search on the bugzilla starting page with
> > "Download Error" as the text *does not* find this one. I guess mine will not be
> > the last dupe :-(
>
> That's because this bug is fixed. What you call "standard search" only searches
> unresolved bugs because these are of most interest of developers. So before
> filing a bug you should also include RESOLVED bugs in your search.
>
> Moreover, since this bug is already fixed in recent builds, the number of users
> encountering this problem will drops and therefore the number of duplicate
> reports will drop.
>
>
when you go to the "enter a (new) bug" page, for example:
http://bugzilla.mozilla.org/enter_bug.cgi?product=Browser
the "Step 1 - search for your bug" section has a box to enter
your search terms. there is NO place to check resolved or unresolved or any of
that. just put in text, then click the "search" button. this "Step 1 search"
button action should include resolved as a DEFAULT behaviour! it does not. those
of us entering new bugs do not even know HOW to include resolved, LET ALONE that
we even need to include it. if the bugzilla managers change the default "Step 1
- search for your bug" action to include resolved, then the bugzilla managers
will spend less time wasted on marking duplicates :) invest a little time now
changing the search behaviour, save a lot of time in long run that more than
makes up for it...
Comment 59•22 years ago
|
||
*** Bug 242096 has been marked as a duplicate of this bug. ***
Comment 60•22 years ago
|
||
*** Bug 242138 has been marked as a duplicate of this bug. ***
Comment 61•22 years ago
|
||
*** Bug 242154 has been marked as a duplicate of this bug. ***
Comment 62•22 years ago
|
||
*** Bug 242246 has been marked as a duplicate of this bug. ***
Comment 63•22 years ago
|
||
*** Bug 242262 has been marked as a duplicate of this bug. ***
Comment 64•22 years ago
|
||
*** Bug 242271 has been marked as a duplicate of this bug. ***
Comment 65•22 years ago
|
||
*** Bug 242312 has been marked as a duplicate of this bug. ***
Comment 66•22 years ago
|
||
*** Bug 242335 has been marked as a duplicate of this bug. ***
Comment 67•22 years ago
|
||
*** Bug 242332 has been marked as a duplicate of this bug. ***
Adding "Save Page As" (actual UI element) and "with hostname" (actual error) to
the subject to make this bug easier to find.
Summary: Saving page or image results in "Download Error" dialog (but succeeds anyway) download error → Saving page (Save Page As) or image results in "Download Error" dialog with hostname (but succeeds anyway) download error
Comment 69•22 years ago
|
||
*** Bug 242358 has been marked as a duplicate of this bug. ***
Comment 70•22 years ago
|
||
*** Bug 242403 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 71•22 years ago
|
||
*** Bug 242403 has been marked as a duplicate of this bug. ***
Comment 72•22 years ago
|
||
*** Bug 242415 has been marked as a duplicate of this bug. ***
Comment 73•22 years ago
|
||
james@nervousness.org do NOT REMOVE members from the CC list unless
specificially ASKED by those people. Furthermore, do NOT remove all these names
w/o any comment or justification whatsoever
I'm putting you on the CC list so you get this message.
Comment 74•22 years ago
|
||
James: Any particular reason that you removed all those addresses (including
mine) from the CC list?
| Assignee | ||
Comment 75•22 years ago
|
||
he was probably using netscape 4 and ran into a bug of that browser.
Comment 76•22 years ago
|
||
*** Bug 242523 has been marked as a duplicate of this bug. ***
Comment 77•22 years ago
|
||
*** Bug 242555 has been marked as a duplicate of this bug. ***
Comment 78•22 years ago
|
||
*** Bug 242559 has been marked as a duplicate of this bug. ***
Comment 79•22 years ago
|
||
*** Bug 242593 has been marked as a duplicate of this bug. ***
Comment 80•22 years ago
|
||
*** Bug 242802 has been marked as a duplicate of this bug. ***
Comment 81•22 years ago
|
||
*** Bug 242910 has been marked as a duplicate of this bug. ***
Comment 82•22 years ago
|
||
*** Bug 243000 has been marked as a duplicate of this bug. ***
Comment 83•22 years ago
|
||
*** Bug 243039 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 84•22 years ago
|
||
*** Bug 243043 has been marked as a duplicate of this bug. ***
Comment 85•22 years ago
|
||
*** Bug 243058 has been marked as a duplicate of this bug. ***
Comment 86•22 years ago
|
||
*** Bug 243094 has been marked as a duplicate of this bug. ***
Comment 87•22 years ago
|
||
*** Bug 243140 has been marked as a duplicate of this bug. ***
Comment 88•22 years ago
|
||
*** Bug 243247 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 89•22 years ago
|
||
*** Bug 243287 has been marked as a duplicate of this bug. ***
Comment 90•22 years ago
|
||
*** Bug 243427 has been marked as a duplicate of this bug. ***
Comment 91•22 years ago
|
||
*** Bug 243590 has been marked as a duplicate of this bug. ***
Comment 92•22 years ago
|
||
*** Bug 243641 has been marked as a duplicate of this bug. ***
Comment 93•22 years ago
|
||
*** Bug 243772 has been marked as a duplicate of this bug. ***
Comment 94•22 years ago
|
||
Bug 243772 is not exactly a duplicate of the bug described in the Summary.
My dialog does not say any kind of error, it only shows the yellow
warning symbol.
Comment 95•22 years ago
|
||
*** Bug 243830 has been marked as a duplicate of this bug. ***
Comment 96•22 years ago
|
||
*** Bug 243877 has been marked as a duplicate of this bug. ***
(In reply to comment #94)
> Bug 243772 is not exactly a duplicate of the bug described in the Summary.
> My dialog does not say any kind of error, it only shows the yellow
> warning symbol.
FYI, since the Mac uses a sheet and there's no window title on the sheet,
there's no error message (the error is in the window title on other platforms).
Comment 98•22 years ago
|
||
*** Bug 243987 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 99•22 years ago
|
||
*** Bug 245166 has been marked as a duplicate of this bug. ***
Updated•22 years ago
|
Keywords: fixed1.7 → verified1.7
You need to log in
before you can comment on or make changes to this bug.
Description
•