bug 240367, also filter out nsITransport::STATUS_READING and STATUS_WRITING messages r+sr=darin